--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,32 +1,23 @@
-
-set relativenumber
-set number
-
 " https://superuser.com/questions/622898/how-to-turn-off-the-bell-sound-in-intellij
 " https://stackoverflow.com/questions/63386803/how-to-turn-off-a-bell-in-intellij-idea
 set visualbell
 
-" https://github.com/JetBrains/ideavim/blob/master/doc/emulated-plugins.md
-
 set surround
 
-" https://youtrack.jetbrains.com/issue/VIM-1970 
+" https://youtrack.jetbrains.com/issue/VIM-1970
 set highlightedyank
 
 " https://youtrack.jetbrains.com/issue/VIM-959
 set ideamarks
 
-" https://github.com/JetBrains/ideavim/wiki/%60ideajoin%60-examples
+" smart line joining
 set ideajoin
 
 " https://youtrack.jetbrains.com/issue/VIM-1521
 set commentary
 
-" dia daa cia caa
+" dia daa cia caa, text object: 'a' -> argument
 set argtextobj
-
-" die dae cie cae
-set textobj-entire
 
 " https://youtrack.jetbrains.com/issue/VIM-1042
 set NERDTree
@@ -39,143 +30,129 @@ set textobj-indent
 
 set exchange
 
-" remember to assing to Vim the following shortcuts!
-" C-h
-" C-l
-" C-o
-" C-i
-" C-v
-" C-w Vim uses it to switch windows, the IDE behaviour is mapped to C-k instead
-" C-k
-" C-m Enter alternative
-" C-[ A great Esc key alternative! In the ide, moves caret to code block start.
-" C-] Go to definition. In the ide, moves caret to code block end.
-
-" consider NOT assigning to Vim the following shortcuts:
-" C-e recent files popup window is very useful
-" C-b find occurrences in file popup
-" C-u go to super method
-" C-q info popup
-" C-j We already have j in Vim, better use it for Insert Live Template
-" C-n class search
-
-" unsure about assigning to Vim or to IDE
-" C-f find or move forward?
-" C-r replace or redo?
-" C-y
-" C-c We already have C-[, don't we?
-" C-p kind of not very used withou C-n
-" C-s doesn't seem very useful in Vim
-" C-t update project in IDEA, something something tag stack in Vim
-" C-a I don't use it that much in Vim
-" C-x same as above
-
-" https://github.com/JetBrains/ideavim/wiki/sethandler
-" To be able to say 'same as regular Idea behaviour, but only on insert mode'.
-" 
-" Same as default IDEA action, but only in normal mode. Delete previous char
-" in insert mode.
-" See also Ctrl + Shift + H for method hierarchy, Ctrl + Alt + H for call
-" hierarchy.
-sethandler <C-h> n:ide
-" Same as default IDEA action, but only in insert mode. Enter block-visual
-" mode in normal mode.
-sethandler <C-v> i:ide
-
-" https://github.com/JetBrains/ideavim/wiki/Select-mode
-" set selectmode-=template
-
-"  Mouseless Driven Development by Hadi Hariri https://www.youtube.com/watch?v=UH6YVv9js3s 
-" https://github.com/JetBrains/ideavim
-" https://github.com/Valloric/dotfiles/blob/master/intellij/ideavimrc
-" https://resources.jetbrains.com/storage/products/intellij-idea/docs/IntelliJIDEA_ReferenceCard.pdf
-let mapleader = " "
-
-" These are leader-based alternative shortcuts for actions whose corresponding
-" idea shortcuts require hand-stretching combinations, function keys, Home or
-" Insert.
-"
-set ideastrictmode
-nmap [[ <Action>(MethodUp)
-nmap ]] <Action>(MethodDown)
-nmap ]q <Action>(GotoNextElementUnderCaretUsage)
-nmap [q <Action>(GotoPrevElementUnderCaretUsage)
-nmap <leader>t <action>(ActivateTerminalToolWindow)
-nmap <leader>o <action>(OptimizeImports)
-
-" Shift + F6 in idea.
-" Alt + R, then R (through the menu bar) also seems to work fine.
-" map <Leader>r :action RenameElement<CR>
-" Ctrl + F12 in idea.
-" map <Leader>s Action(FileStructurePopup)
-map s <Action>(SelectIn)
-" Perhaps a bit useless compared to search anything.
-"map s <Action>(GotoSymbol)
-map <Leader>s <Action>(FileStructurePopup)
-map <Leader>S <Action>(StructuralSearchActions)
-" Perhaps just use the Idea shortcut Ctrl-Alt-B
-" Alt + N, then m (through the menu bar) also seems to work, but it is
-" non-unique.
-map <Leader>i <Action>(GotoImplementation)
-map <Leader>m <Action>(GotoImplementation)
-map <Leader>d <Action>(GotoImplementation)
-map <Leader>n <Action>(GotoClass)
-" Jump to next/previous error, show error description
-" https://stackoverflow.com/questions/13346245/keyboard-shortcut-to-display-error-in-intellij
-map <Leader>e <Action>(ShowErrorDescription)
-" Alt + F7 in idea. 
-" Find usages in file is Ctrl + F7. 
-" Alt + E, then F, then U (through the menu bar) also seems to work fine.
-map <Leader>f <Action>(GotoFile)
-map <Leader>F <Action>(HighlightUsagesInFile)
-" Alt + Insert in idea.
-map <Leader>g <Action>(Generate)
-" F12 
-map <Leader>w <Action>(HideAllWindows)
-map <Leader>W <Action>(JumpToLastWindow)
-" Possibly redundant given "Run Anything" DoubleCtrl
-map <Leader>r <Action>(ChooseRunConfiguration)
-map <leader>d <Action>(Debug)
-map <Leader>R <Action>(Refactorings.QuickListPopupAction)
-" map <Leader>a <Action>(AnalyzeActionsPopup)
-
-" I like using space for jumping to the next error or issue
-map <Space> <Action>(GotoNextError)
-" Kind of makes more sense to use Backspace to go back... but could it be assigned a better action?
-map <Leader><Space> <Action>(GotoPreviousError)
-"map <BS> <Action>(GotoPreviousError)
-map <BS> <Action>(GotoRelated)
+" redo
+noremap U <C-r>
 
 
-" The default C-o and C-i behaviours have certain inconsistencies with
-" Vim which I can't quite pinpoint.
-" I'm using the default IntelliJ behaviours instead.
+
+" leader key
+let mapleader = ' '
+
+" jump between angle brackets
+set matchpairs+=<:>
+
+
+" open config
+noremap <leader>cc :edit ~/.ideavimrc<cr>
+
+" source config
+noremap <leader>cs :source ~/.ideavimrc<cr>:nohlsearch<cr>
+
+" highlight search results
+set hlsearch
+
+" remove search highlights
+nnoremap <Esc> :nohlsearch<cr>
+
+" ignore case when searching
+set ignorecase
+
+" enable case sensitive search if uppercase is present
+set smartcase
+
+" search while typing
+set incsearch
+
+" relative line numbers
+set relativenumber
+
+" consider camelCase/snake_case etc.
+" move to the beginning of the next word
+map w [w
+
+" move to the end of the next word
+map e ]w
+
+" move to the beginning of the previous word
+map b [b
+
+" move to the end of the previous word
+map ge ]b
+
+" go to the top split
+map <A-k> <C-w>k
+
+" go to the bottom split
+map <A-j> <C-w>j
+
+" go to the left split
+map <A-h> <C-w>h
+
+" go to the right split
+map <A-l> <C-w>l
+
+map <leader>wv <Action>(SplitVertically)
+map <leader>wh <Action>(SplitHorizontally)
+
+map <leader>sc <Action>(GotoClass)
+map <leader>sf <Action>(GotoFile)
+map <leader>ss <Action>(GotoSymbol)
+map <leader>sa <Action>(GotoAction)
+map <leader>gi <Action>(GotoImplementation)
+map <leader>gt <Action>(GotoTest)
+map <leader>gm <Action>(GotoSuperMethod)
+map <leader>gl <Action>(GotoLine)
+
+map <leader>ug <Action>(FindUsages)
+map <leader>uu <Action>(ShowUsages)
+map <leader>im <Action>(QuickImplementations)
+map <leader>ti <Action>(ExpressionTypeInfo)
+map <leader>oo <Action>(FileStructurePopup)
+
+" refactorings
+map <leader>rn <Action>(RenameElement)
+map <leader>rm <Action>(ExtractMethod)
+map <leader>rv <Action>(IntroduceVariable)
+map <leader>rf <Action>(IntroduceField)
+map <leader>rc <Action>(IntroduceConstant)
+map <leader>rs <Action>(ChangeSignature)
+map <leader>rr <Action>(Refactorings.QuickListPopupAction)
+
+map <leader>sw <Action>(SurroundWith)
+
+map <C-[> <Action>(EditorCompleteStatement)
+
+map <leader>en <Action>(GotoNextError)
+map <leader>ep <Action>(GotoPreviousError)
+map <leader>lc <Action>(JumpToLastChange)
+map <leader>ll <Action>(RecentLocations)
+
 map <C-o> <Action>(Back)
 map <C-i> <Action>(Forward)
-map g; <Action>(JumpToLastChange)
-map g, <Action>(JumpToNextChange)
-map <leader>a <Action>(Annotate)
 
+map <A-[> <Action>(MethodUp)
+map <A-]> <Action>(MethodDown)
+
+map <leader><leader> <Action>(ReformatCode)
+map <leader>oi <Action>(OptimizeImports)
+map <leader>ra <Action>(RearrangeCode)
+
+map <C-j> <Action>(MoveLineDown)
+map <C-k> <Action>(MoveLineUp)
+map <C-A-j> <Action>(MoveStatementDown)
+map <C-A-k> <Action>(MoveStatementUp)
+
+map <leader>ca <Action>(CopyAbsolutePath)
+map <leader>cn <Action>(CopyFileName)
+map <leader>cp <Action>(CopyContentRootPath)
+
+map <leader>fs <Action>(NewScratchFile)
+
+" old mappings
+map s <Action>(SelectIn)
+map <Leader>e <Action>(ShowErrorDescription)
+
+map <Leader>R <Action>(ChooseRunConfiguration)
+map <Leader><F2> <Action>(Stop)
+map <leader>D <Action>(Debug)
 map <leader>z <Action>(ToggleDistractionFreeMode)
-"
-" Here are mappings about which I'm less sure.
-
-" This is for going to related symbols. I can't find any effect in the community edition.
-" map <Leader>g :action GotoRelated<CR> 
-
-" uppercase last inserted text. Perhpas just use gU`[ instead.
-" map <Leader>u `[v`]~`]
-
-" Can also use Ctrl-Shift-[
-map <Leader>[ <Action>(EditorCodeBlockStart)
-" Can also use Ctrl-Shift-]
-map <Leader>] <Action>(EditorCodeBlockEnd)
-
-" This is Ctrl-W in the default keymap, but we are using it for Vim.
-" map <C-s> :action EditorSelectWord<CR> " somewhat unconfrotable to type
-" map <C-d> :action EditorSelectWord<CR> " ditto
-" better to use your two hands!
-map <C-k> <Action>(EditorSelectWord)
-
-" uppercase last inserted word
-imap <C-l> <Esc>bgUawea 
