--- a/.ideavimrc
+++ b/.ideavimrc
@@ -17,7 +17,10 @@ set ideajoin
 set commentary
 
 " dia daa cia caa, text object: 'a' -> argument
-set argtextobj
+" set argtextobj
+
+" https://plugins.jetbrains.com/plugin/28333-vim-anyobject
+set anyobject
 
 " https://youtrack.jetbrains.com/issue/VIM-1042
 set NERDTree
@@ -65,6 +68,7 @@ set incsearch
 
 " relative line numbers
 set relativenumber
+set number
 
 " consider camelCase/snake_case etc.
 " move to the beginning of the next word
